--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "^30.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.0",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.3",
