--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "node dist/app.js"
+    "start": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
